# FLY_Project

./: README.md
DGZL/: WSL2配置  WSL2配置.md
主控/: PPM.md  readme.md  无人机技术_软件基础.md
主控/px4/: DShot电调.md  Emergency Kill.md  GPS.md  MPC相关.md  XTDrone仿真报错.md  readme.md  光流参数.md  固件源码编译.md
主控/solidworks/: 11.md  启动报错：无法获得许可.md
主控/硬件/: 动力套选型.md
机载电脑/: 1.将系统改为中文.md  2.学习文档记录.md  2.安装ROS1.md  3.学习文档记录.md  4.realsenseSDK2&Fast-Drone-250安装.md  4.realsenseSDK2安装.md  4.安装slam那些事.md  5.ROS常用命令.md  5.机载电脑环境配置.md  7.安装mid360相关驱动.md  8.livox雷达仿真  8.livox雷达仿真.md  Ubuntu常用命令.md  [实用]ROS2实用命令.md  [实用]Ubuntu修改(创建)swap方法.md  [实用]wsl使用direct_calib标定包显卡驱动报错.md  [实用]wsl克隆主机网卡（代理可共用主机）.md  [实用]wsl连接主机usb.md  [实用]代理指令.md  [实用]掉网问题.md  [番外]fast_livo2复刻.md  [番外]启动rosrealsenses左右红外相机流.md  [番外]飞控调imu频率.md  readme.md  海康相机info发送修改.md
机载电脑/scripts/: readme.md
机载电脑/scripts/get_pic/: readme.md
机载电脑/scripts/get_pic/src/get_pic/: CMakeLists.txt  package.xml
机载电脑/scripts/get_pic/src/get_pic/scripts/: record_20s_open3d.py  save_one_image.py
机载电脑/scripts/livo2录制脚本/: record.sh
机载电脑/scripts/启动livo2和px4脚本/: px4start.sh  startlivo2.sh
机载电脑/scripts/飞控校赛脚本/: test1-1.py  test1-2.py  test2-2.py
机载电脑/图片/: readme.md
视觉/: 图像形态学.md  图像滤波.md  基础操作.md  指令
